<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- - - - - - - - - - - - - - -->
    <!-- Used throughout WakeMeHome-->
    <!-- - - - - - - - - - - - - - -->

    <!--Used in Action Bar, and in AndroidManifest to tell the device the name of this app.-->
    <!--It's good to keep this short, so your launcher icon isn't displayed with "The greatest Wea"-->
    <!--or something similar.-->
    <string name="app_name">WakeMeHome</string>

    <!--By convention, "action" denotes that this String will be used as the label for an Action,-->
    <!--typically from the action bar.  The ActionBar is limited real estate, so shorter is better.-->
    <string name="action_settings">Settings</string>

    <string name="error_message">
        An error has occurred. Please try again by clicking REFRESH
    </string>

    <!-- - - - - - - - - - - - -->
    <!-- Used by DetailActivity-->
    <!-- - - - - - - - - - - - -->

    <string name="action_save">Save</string>


    <string name="error_mandatory">
        Please select location and radius in order to save the alarm
    </string>
    <!-- "&#176;" = unicode character for degree symbol -->
    <string name="error_latitude">Latitude must be between -90&#176; and +90&#176;</string>
    <string name="error_longitude">Longitude must be between -180&#176; and +180&#176;</string>

    <!-- This has a unicode character for "..." = "&#8230;" -->
    <string name="alarm_location_label" ><u>Alarm location:</u></string>
    <string name="edit_alarm_latitude" >Latitude</string>
    <string name="edit_alarm_longitude" >Longitude</string>
    <string name="edit_alarm_radius" >Radius</string>
    <string name="edit_alarm_enabled" >Enabled?</string>
    <string name="edit_alarm_vibrate" >Vibrate?</string>
    <string name="edit_alarm_message" >None</string>
    <string name="edit_alarm_alert" >Alert</string>

    <string name="message_label">Alarm name</string>
    <string name="alert_label">Alarm sound</string>
    <string name="vibrate_label">Vibration</string>

    <string name="open_map_button">Find On Map</string>
    <string name="select_location_button">Select Location</string>
    <string name="label_radius_select">Select Radius:</string>


    <!-- - - - - - - - - - - -->
    <!-- Used by Preferences -->
    <!-- - - - - - - - - - - -->

    <!-- Label for the length units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Length Units</string>

    <!-- Label for metric option in length unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option in length unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for length unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric length unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial length unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>


    <!-- - - - - - - - - - - - - - - -->
    <!-- Used by WakeMeHomeUnitsUtils-->
    <!-- - - - - - - - - - - - - - - -->

    <!-- Length format in Kilometres [CHAR LIMIT=5] -->
    <string name="format_length_metres">
        <xliff:g id="length">%1.0f</xliff:g> m
    </string>

    <!-- Length format in Miles [CHAR LIMIT=5] -->
    <string name="format_length_feet">
        <xliff:g id="length">%1.0f</xliff:g> ft
    </string>


    <!-- - - - - - - - - - - - - - -->
    <!-- Used by geofencing package-->
    <!-- - - - - - - - - - - - - - -->

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <!-- Notification texts -->
    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>
    <string name="geofence_not_available_title">
        Location services are unavailable - alarms will not trigger!
    </string>
    <string name="geofence_not_available_text">
        Was location access turned off? Click notification to go to settings
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">
        Location permission is needed for core functionality
    </string>
    <string name="permission_denied_explanation">
        Permission was denied, but is needed for core functionality.
    </string>
    <string name="settings">Settings</string>


    <!-- - - - - - - - - - - - - - -->
    <!-- Used by geofencing package-->
    <!-- - - - - - - - - - - - - - -->

    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>

    <!-- Error strings -->
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">
        Location permission is needed for core functionality
    </string>
    <string name="permission_denied_explanation">
        Permission was denied, but is needed for core functionality.
    </string>
    <string name="settings">Settings</string>

</resources>
