<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clock_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/divider"
        android:paddingBottom="@dimen/detail_vertical_padding"
        android:paddingEnd="@dimen/detail_horizontal_padding"
        android:paddingLeft="@dimen/detail_horizontal_padding"
        android:paddingRight="@dimen/detail_horizontal_padding"
        android:paddingStart="@dimen/detail_horizontal_padding"
        android:paddingTop="@dimen/detail_vertical_padding">

        <!-- This guideline divides the layout into a left and right half and is used for alignment -->
        <android.support.constraint.Guideline
            android:id="@+id/horizontal_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <!-- Message label -->
        <TextView
            android:id="@+id/message_label"
            style="@style/DetailLabel"
            android:text="@string/message_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/message"
            app:layout_constraintBottom_toBottomOf="@+id/message"/>

        <!-- Message edit -->
        <EditText
            android:id="@+id/message"
            style="@style/DetailEdit"
            android:hint="@string/edit_alarm_message"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Get off at Brodetsky/Salvador"
            android:importantForAutofill="no"
            android:inputType="text" />

        <!-- Alert label -->
        <TextView
            android:id="@+id/alert_label"
            style="@style/DetailLabel"
            android:text="@string/alert_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/alert"
            app:layout_constraintBottom_toBottomOf="@+id/alert"/>

        <!-- Alert edit -->
        <EditText
            android:id="@+id/alert"
            style="@style/DetailEdit"
            android:hint="@string/edit_alarm_alert"
            android:paddingBottom="@dimen/detail_vertical_padding"
            app:layout_constraintTop_toBottomOf="@+id/message"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"
            tools:text="Morning Flower"
            android:importantForAutofill="no"
            android:inputType="text" />

        <!-- Vibrate label -->
        <TextView
            android:id="@+id/vibrate_label"
            style="@style/DetailLabel"
            android:text="@string/vibrate_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/vibrate"
            app:layout_constraintBottom_toBottomOf="@+id/vibrate"/>

        <!-- Vibrate switch -->
        <Switch
            android:id="@+id/vibrate"
            style="@style/DetailEdit"
            app:layout_constraintTop_toBottomOf="@+id/alert"
            app:layout_constraintLeft_toLeftOf="@+id/horizontal_middle"/>

    </android.support.constraint.ConstraintLayout>
</layout>