<?xml version="1.0" encoding="utf-8"?>

<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
  - This layout displays a given alarms's location information and range.                        -
  -                                                                                              -
  - In order to use Android's data binding capabilities, (to avoid having to type findViewById   -
  - over and over again) we wrap this layout in a <layout></layout> tag.                         -
  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <!-- EditText for alarm human readable location  -->
        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/edit_alarm_location"
            android:paddingBottom="@dimen/activity_horizontal_margin" />

        <!-- EditText for alarm latitude -->
        <EditText
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/edit_alarm_latitude"
            android:paddingBottom="@dimen/activity_horizontal_margin" />

        <!-- EditText for alarm longitude -->
        <EditText
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/edit_alarm_longitude"
            android:paddingBottom="@dimen/activity_horizontal_margin" />

        <!-- EditText for alarm radius -->
        <EditText
            android:id="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/edit_alarm_radius"
            android:paddingBottom="@dimen/activity_horizontal_margin" />

    </LinearLayout>

</layout>